deploy-jira.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: std-jira
  namespace: prod-jira
  labels:
    app.kubernetes.io/name: std-jira
    app.kubernetes.io/env: prod
    app.kubernetes.io/project: STD.JIRA
    app.kubernetes.io/type: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: std-jira
      app.kubernetes.io/env: prod
      app.kubernetes.io/project: STD.JIRA
      app.kubernetes.io/type: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: std-jira
        app.kubernetes.io/env: prod
        app.kubernetes.io/project: STD.JIRA
        app.kubernetes.io/type: app
    spec:
      serviceAccountName: std-jira

      containers:
        - name: jira
          image: atlassian/jira-software:10.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jira-data
              mountPath: /var/atlassian/application-data/jira
          
          resources:
            requests:
              memory: "3Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1000m"

      volumes:
        - name: jira-data
          persistentVolumeClaim:
            claimName: jira-pvc
