jira-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
  namespace: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: docker.io/atlassian/jira-software:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jira-data
              mountPath: /var/atlassian/application-data/jira

          resources:
            requests:
              cpu: "512m"
              memory: "1000Mi"
            limits:
              cpu: "1000"
              memory: "1Gi"



      volumes:
        - name: jira-data
          persistentVolumeClaim:
            claimName: jira-data
---
apiVersion: v1
kind: Service
metadata:
  name: jira
  namespace: jira
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8080
  selector:
    app: jira
