service-jira.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
  namespace: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: docker.io/trialllss/test1:v24
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jira-data
              mountPath: /var/atlassian/application-data/jira

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"

      volumes:
        - name: jira-data
          persistentVolumeClaim:
            claimName: jira-data
---
apiVersion: v1
kind: Service
metadata:
  name: jira
  namespace: jira
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: jira
