service-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-postgres
  namespace: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira-postgres
  template:
    metadata:
      labels:
        app: jira-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "400m"
              memory: "1000Mi"
            limits:
              cpu: "400m"
              memory: "1000Mi"

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: jira-postgres
  namespace: jira
spec:
  ports:
    - port: 5432
  selector:
    app: jira-postgres
