ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-ingress
  namespace: jira
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: jira.middleweb.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira
                port:
                  number: 8080
